--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,14 +1,24 @@
 ---
-title: 'Blog Post number 1'
-date: 2012-08-14
+title: 'Thoughts on Compactness'
+date: 2026-8-15
 permalink: /posts/2012/08/blog-post-1/
 tags:
-  - cool posts
-  - category1
-  - category2
+  - topology
 ---
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
+Test inline $
+\int_{0}^{\infty} e^{-x^2} \, dx = \frac{\sqrt{\pi}}{2}
+$
+Antisymmetric matrix
+$$\begin{pmatrix}
+a & b \\
+-b & a\\
+\end{pmatrix}$$
+
+
+
+
+
 
 Headings are cool
 ======
@@ -18,3 +28,4 @@ You can have many headings
 
 Aren't headings cool?
 ------
+
